<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.lichthidaubongda.fragment.home.view.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_scheduleFragment"
            app:destination="@id/scheduleFragment" />
        <action
            android:id="@+id/action_homeFragment_to_chartFragment"
            app:destination="@id/chartFragment" />
    </fragment>
    <fragment
        android:id="@+id/scheduleFragment"
        android:name="com.example.lichthidaubongda.fragment.schedule.view.ScheduleFragment"
        android:label="@string/Schedule"
        tools:layout="@layout/fragment_schedule" />
    <fragment
        android:id="@+id/chartFragment"
        android:name="com.example.lichthidaubongda.fragment.chart.view.ChartFragment"
        android:label="@string/Chart"
        tools:layout="@layout/fragment_chart" />
</navigation>