<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_white_conner_16"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_red_conner_top_r_l_16"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_team_name_dialog_chart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/About"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_info_50"
            app:layout_constraintBottom_toBottomOf="@+id/tv_team_name_dialog_chart"
            app:layout_constraintStart_toStartOf="@+id/tv_team_name_dialog_chart"
            app:layout_constraintTop_toTopOf="@+id/tv_team_name_dialog_chart" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="8dp"
            android:text="@string/About1"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="8dp"
            android:text="@string/About2"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="8dp"
            android:text="@string/About3"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="8dp"
            android:text="@string/About4"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_confirm_about_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="128dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/btn_dialog_about_home_selector"
        android:text="@string/Confirm"
        android:textColor="@color/white" />

</LinearLayout>